tests/specs/permission/allow_import_jsx/main.tsx
export function Component() {
  return <div>Hi</div>;
}
